# guss

./: .gitignore  Dockerfile  README.md  cookiecutter.json  create.py  main.py  pyproject.toml  setup.py  setup.yaml  utils.py
ser/: baker.py  docker.py  factories.py  secrets.py  setup.py  utils.py
ser/services/: arkitekt.py  auth.py  common.py  fluss.py  herre.py  hub.py  mikro.py  port.py  shared.py
test/: setup.yaml  validated.yaml
test/fakts/linkers/: generic.yaml
test/fakts/templates/: generic.yaml
{{cookiecutter.project_name}}/: docker-compose.yaml  hallo.yaml
{{cookiecutter.project_name}}/configs/: herre.yaml
